add post & date formatter

--- a/App/I18n/languages/english.json
+++ b/App/I18n/languages/english.json
@@ -31,4 +31,9 @@
    "login": "Login",
    "logout": "Logout",
 
+   "yesterday": "Yesterday",
+   
+   "share": "Share",
+   "comment": "Comment",
+
 }
