--- a/App/I18n/languages/english.json
+++ b/App/I18n/languages/english.json
@@ -1,39 +1,42 @@
 {
-   "explore": "Explore",
-   "saved": "Saved",
-   "chat": "Chat",
-   "inbox": "Inbox",
-   "profile": "Profile",
+  "explore": "Explore",
+  "saved": "Saved",
+  "chat": "Chat",
+  "inbox": "Inbox",
+  "profile": "Profile",
 
-   "searchPlaceholder": "Find food, places, or services..",
-   "popular": "Popular",
-   "recommended": "Recommended",
-   "seeAll": "See All",
-   
-   "viewProfile": "View profile",
+  "searchPlaceholder": "Find food, places, or services..",
+  "popular": "Popular",
+  "recommended": "Recommended",
+  "seeAll": "See All",
 
-   "hosting": "Hosting",
-   "yourPlaces": "Your places",
-   "listYourSpace": "List your space",
+  "viewProfile": "View profile",
 
-   "support": "Support",
-   "help": "Help",
-   "feedback": "Feedback",
+  "hosting": "Hosting",
+  "yourPlaces": "Your places",
+  "listYourSpace": "List your space",
 
-   "legal": "Legal",
-   "termsOfService": "Terms of Service",
-   "privacyPolicy": "Privacy Policy",
+  "support": "Support",
+  "help": "Help",
+  "feedback": "Feedback",
 
-   "locationPermissionDenied": "Location permission denied",
-   "cameraPermissionDenied": "Camera permission denied",
-   "tryAgain": "Try again",
+  "legal": "Legal",
+  "termsOfService": "Terms of Service",
+  "privacyPolicy": "Privacy Policy",
 
-   "login": "Login",
-   "logout": "Logout",
+  "locationPermissionDenied": "Location permission denied",
+  "cameraPermissionDenied": "Camera permission denied",
+  "tryAgain": "Try again",
 
-   "yesterday": "Yesterday",
-   
-   "share": "Share",
-   "comment": "Comment",
+  "login": "Login",
+  "logout": "Logout",
 
+  "yesterday": "Yesterday",
+
+  "share": "Share",
+  "comment": "Comment",
+
+  "savedDesc": "Your messages will appear here.",
+  "chatDesc": "Your messages will appear here.",
+  "profileDesc": "Login to enjoy more features."
 }
