add inbox & styling

--- a/App/I18n/languages/english.json
+++ b/App/I18n/languages/english.json
@@ -11,6 +11,7 @@
   "seeAll": "See All",
 
   "viewProfile": "View profile",
+  "viewEditProfile": "View and edit profile",
 
   "hosting": "Hosting",
   "yourPlaces": "Your places",
