add google login

--- a/App/I18n/languages/english.json
+++ b/App/I18n/languages/english.json
@@ -12,7 +12,8 @@
 
   "viewProfile": "View profile",
   "viewEditProfile": "View and edit profile",
-
+  "personalName": "Personal Name",
+  
   "hosting": "Hosting",
   "yourPlaces": "Your places",
   "listYourSpace": "List your space",
