integrate my place

--- a/App/I18n/languages/english.json
+++ b/App/I18n/languages/english.json
@@ -42,6 +42,7 @@
   "chatDetail": "Your chats will appear here.",
   "inboxDetail": "Your messages will appear here.",
   "profileDetail": "Login to enjoy more features.",
+  "hostDetail": "Your places will appear here.",
 
   "placeName": "Place name",
   "placeCategories": "Place categories",
