--- a/App/I18n/languages/english.json
+++ b/App/I18n/languages/english.json
@@ -67,6 +67,8 @@
 
   "priceDetail": "Price in Rp (from - to)",
 
+  "pinYourLocation": "Pin your location",
+
   "title": "Title",
   "url": "Url",
 
