--- a/App/I18n/languages/english.json
+++ b/App/I18n/languages/english.json
@@ -89,5 +89,6 @@
   "alreadyHostTitle": "You've host before",
   "alreadyHostMessage": "Wait for approval to host a new one",
   
+  "searchNotFound": "Search not found",
 
 }
