better ui in loading

--- a/App/I18n/languages/english.json
+++ b/App/I18n/languages/english.json
@@ -102,5 +102,6 @@
   "tellUsPlaceholder": "Cube cerite, kite ngelakar?",
   "loginFirstPlaceholder": "Login dulu, jadi nyaman cerite disine",
   "berage": "Berage",
+  "textIsEmpty": "Mane kate-kate e?",
 
 }
