add slotLeft in place & remove unused images

--- a/App/I18n/languages/english.json
+++ b/App/I18n/languages/english.json
@@ -96,12 +96,17 @@
 
   "loginFirst": "Login dulu",
 
-  
   "verify": "Verify",
   
   "tellUsPlaceholder": "Cube cerite, kite ngelakar?",
   "loginFirstPlaceholder": "Login dulu, jadi nyaman cerite disine",
   "berage": "Berage",
   "textIsEmpty": "Mane kate-kate e?",
+
+  "minute": "menit",
+  "available": "Tersedia",
+  
+  "open": "Buka",
+  "closed": "Tutup",
 
 }
