add maintenance screen with setup navigateservice

--- a/App/I18n/languages/english.json
+++ b/App/I18n/languages/english.json
@@ -50,6 +50,7 @@
   "profileDetail": "Login dulu biar dapat akses lebe.",
   "hostDetail": "Disine tempat-tempat nok ikak host.",
   "onlineDetail": "Biak-biak nok online ade disine mun join.",
+  "maintenanceDetail": "Pembaharuan sistem, coba lagi nanti.",
 
   "placeName": "Name tempat",
   "placeCategories": "Kategori",
