--- a/App/I18n/languages/english.json
+++ b/App/I18n/languages/english.json
@@ -100,6 +100,7 @@
   "verify": "Verify",
   
   "tellUsPlaceholder": "Cube cerite, kite ngelakar?",
+  "commentPlaceholder": "Ikan iu ikan buas yuk balas",
   "loginFirstPlaceholder": "Login dulu, jadi nyaman cerite disine",
   "toFarPlaceholder": "Jarak ikak kejaoan. Kesine dulu atau restart app e",
   "berage": "Berage",
