--- a/App/I18n/languages/english.json
+++ b/App/I18n/languages/english.json
@@ -124,5 +124,7 @@
 
   "editProfileDetail": "Ubah name kan foto ikak disine",
 
+  "setupPermissionDetail": "Berage perlu akses location & notification biar meri info lebe",
+  
   
 }
